# fsort

./: .coderabbit.yaml  .gitignore  Arch.md  LICENSE  README.md  build-deb.sh  build-ui.sh  config.yaml  main.py  pyproject.toml  roadmap_v2.md
.github/workflows/: on-push-build-all.yml  test.yaml
debian/: control  fsort.service  postinst  postrm
docs/: DEBIAN-INSTALL.md
fsort/: __init__.py  cli.py  config.py  extractor.py  models.py  organizer.py  pipeline.py  registry.py  server.py  service.py  storage.py
tests/: test_extractor.py  test_pipeline.py  test_registry.py  test_server.py  test_service.py  test_storage.py  test_thumbnails.py
ui/: package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/api/: facesortApi.js
ui/src/components/: Header.jsx  LoadingSpinner.jsx  MediaCard.jsx  MediaGrid.jsx  MediaViewer.jsx  PeopleGrid.jsx  PersonCard.jsx  Toast.jsx
ui/src/hooks/: useGallery.js  useOfflineCache.js  usePeople.js
ui/src/modals/: CreatePersonModal.jsx  MergePersonModal.jsx  RenamePersonModal.jsx
ui/src/pages/: GalleryPage.jsx  HomePage.jsx
ui/src/utils/: notifications.js  pagination.js
